--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">WorkoutPal</string>
     <string name="action_settings">Settings</string>
+    <string name="arm_button_description">arm_image</string>
+    <string name="graph_button_description">graph_image</string>
+    <string name="checklist_button_description">checklist_image</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
