--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="graph_button_description">graph_image</string>
     <string name="checklist_button_description">checklist_image</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bodymask_string">Invisible image</string>
     <string name="body_string">Body</string>
+    <string name="body_frag_string">Click a body area!</string>
 </resources>
